2004-02-15  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* dia/CanvasBox.custom: Redundant code in ctor removed.
	* dia/CanvasImage.custom: Ditto
	* dia/CanvasLine.custom: Ditto
	* dia/CanvasText.custom: Ditto

2004-02-08  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* dia/DiaCanvas.cs: Added, this is the module class for for 
	  DiaCanvas#, it has a DiaCanvas.Init method which 
	  initializes the module.
	* sample/sample.cs: Uses DiaCanvas.Init()
	* PROBLEMS: One problem whent away with gtk#-0.16 some others
          entered ;)

2004-02-07  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* autogen.sh: Executes aclocal first, this fixes a lot of warnings and
	  build errors.
	* sample/CanvasFigure.cs: Added
	* sample/sample.cs: Exercises CanvasFigure
	* sample/makefile.am: Reduced code

2004-02-06  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* dia/CanvasBox.custom: Obj is now created using the GObject hirarchy,
	  Fixes the default ctor.
	* dia/CanvasImage.custom: Ditto
	* dia/CanvasLine.custom: Ditto
	* dia/CanvasText.custom: Ditto
	* dia/CanvasItem.custom: No need for item create method
	* PROBLEMS: Clarify one of the problems

2004-02-05  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* dia/makefile.am: Removed -nowarn:0660,0661, cause they are not
	  generated anymore

2004-01-26  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* PROBLEMS: Removed problem with array fields not generated
	  properly, they are now generated properly in latest gtk# cvs.

2004-01-06  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* dia/diacanvas-api.xml: Regenerated with gtk#-0.15
	* dia/CanvasItem.custom: Updated to use GLib.GType
	* dia/PlacementTool.cs: Ditto
	* sample/CanvasTextBox.cs: Ditto
	* configure.in: Checks for gtk#-0.15 and 
	  bumped the diacanvas# version to 0.4.0

2003-12-22  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* sample/CanvasTextBox.cs: Removed not needed using line
	* PROBLEMS: Added extra info on casting problem
	* sample/sample.cs: Added extra info on casting problem