@@ -2,19 +2,25 @@
 //
 // Author: Martin Willemoes Hansen <mwh@sysrq.dk>
 //
-// Copyright (C) 2003 Martin Willemoes Hansen
+// Copyright (C) 2003, 2004 Martin Willemoes Hansen
 //
 // This code is inserted after the automatically generated code.
 
 [DllImport ("diacanvassharpglue")]
 extern static IntPtr diasharp_canvas_view_get_selected_items (IntPtr view);
 
-public IList SelectedItems {
+public CanvasViewItem [] SelectedItems {
 	get {
-		GLib.List glist = new GLib.List (diasharp_canvas_view_get_selected_items (Handle));
-		ArrayList list = new ArrayList (glist.Count);
-		foreach (object o in glist) list.Add (o);
-		return list;
+		IntPtr list_ptr = diasharp_canvas_view_get_selected_items (Handle);
+		if (list_ptr == IntPtr.Zero)
+			return new CanvasViewItem [0];
+
+		GLib.List list = new GLib.List (list_ptr, typeof (CanvasViewItem));
+		CanvasViewItem [] result = new CanvasViewItem [list.Count];
+		int i = 0;
+		foreach (CanvasViewItem val in list)
+			result [i ++] = val;
+		return result;
 	}
 }
 
