@@ -1,3 +1,11 @@
+// DiaCanvas - Module initialization code
+//
+// Author: Martin Willemoes Hansen <mwh@sysrq.dk>
+//
+// Copyright (C) 2004 Martin Willemoes Hansen
+//
+// This code is inserted after the automatically generated code.
+
 public class DiaCanvas {
 	public static void Init()
 	{
